Fix overlap - remove vh hero landscape

--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -92,7 +92,12 @@
 }
 
 
+@media (orientation:landscape) {
+    .headerContainer {
 
+        height: unset;
+    }
+}
 
 
 @media only screen and (min-width: 1024px) {
